--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
           displayName: Cache yarn packages
 
         - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
+            yarn install --cache-folder $(YARN_CACHE_FOLDER) --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
           displayName: 'Install node modules'
 
         - bash: |
@@ -76,8 +76,9 @@ stages:
             path: $(YARN_CACHE_FOLDER)
           displayName: Cache yarn packages
 
+        
         - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
+            yarn install --cache-folder $(YARN_CACHE_FOLDER) --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
           displayName: 'Install node modules'
 
         - script: |
@@ -110,7 +111,7 @@ stages:
           displayName: Cache yarn packages
 
         - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
+            yarn install --cache-folder $(YARN_CACHE_FOLDER) --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
           displayName: 'Install node modules'
 
         - bash: |
@@ -120,7 +121,7 @@ stages:
 
   # B) Run unit tests if there is a push or pull request on any branch.
   - stage: Test
-    dependsOn: []
+    dependsOn: [Build] # TODO remove build
     jobs:
       - job: unit_tests
         steps:
@@ -139,7 +140,7 @@ stages:
           displayName: Cache yarn packages
 
         - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
+            yarn install --cache-folder $(YARN_CACHE_FOLDER) --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
           displayName: 'Install node modules'
 
         - script: |
