--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,16 @@ stages:
             yarn predeploy
           displayName: 'Build'
 
+        - task: ArchiveFiles@2
+          inputs:
+            rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+            includeRootFolder: false
+            archiveType: 'zip'
+            archiveFile: 'dist.zip'
+            replaceExistingArchive: true
+            verbose: true
+          displayName: 'Make deployment zip'
+
         - task: PublishPipelineArtifact@1
           condition: and(
               succeeded(),
@@ -75,7 +85,7 @@ stages:
               )
             )
           inputs:
-            targetPath: $(System.DefaultWorkingDirectory)/
+            targetPath: $(System.DefaultWorkingDirectory)/dist.zip
             artifact: 'dist'
             publishLocation: 'pipeline'
           displayName: Publish build artifacts
@@ -270,6 +280,7 @@ stages:
           displayName: 'Download build artifact'
 
         - task: ArchiveFiles@2
+          condition: false
           inputs:
             rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
             includeRootFolder: false
