--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,16 +46,16 @@ stages:
   # A) TODO: remove
   - stage: Check_var
     dependsOn: []
-    condition: and(
-        succeeded(),
-        and (
-          eq(variables['DO_DEPLOY'], True),
-          or(
-            eq(variables['Build.SourceBranch'], 'refs/heads/master'),
-            eq(variables['STAGING_FORCE_DEPLOY'], True)
-          )
+    condition:
+      succeeded(),
+      and (
+        eq(variables['DO_DEPLOY'], True),
+        or(
+          eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+          eq(variables['Build.SourceBranch'], 'refs/tags/latest'),
+          eq(variables['STAGING_FORCE_DEPLOY'], True)
         )
-      )     
+      )
     jobs:    
       # A1) Checkout, install module and build distribution artifacts
       - job: myscript 
