--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -144,7 +144,7 @@ stages:
   # B) Run unit tests if there is a push or pull request on any branch.
   - stage: Test
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'ubuntu-16.04'
     dependsOn: []
     jobs:
       - job: unit_tests
