--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -196,7 +196,7 @@ stages:
 
         - task: CopyFiles@2
           inputs:
-            SourceFolder: '$(Build.DefaultWorkingDirectory)'
+            SourceFolder: '.'
             TargetFolder: '$(Build.ArtifactStagingDirectory)'
             Contents: |
               **/*
